hphp/hack/test/typecheck/new_inference/typehole/lambda_with_invoke.php.exp
File "lambda_with_invoke.php", line 21, characters 36-37:
Was expecting an object but type is unknown (Typing[4297])
File "lambda_with_invoke.php", line 21, characters 15-27:
It is unknown because type parameter T of WrappedLambda could not be determined. Please add type parameters to WrappedLambda.
File "lambda_with_invoke.php", line 14, characters 49-49:
  via this generic T
